# battleship

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  protocol.md  protocol.txt
.github/workflows/: release.yml  ubuntu.yml
client/sfml/: CMakeLists.txt
client/sfml/cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake
client/sfml_client/: CMakeLists.txt
client/sfml_client/cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake
cmake/: CompilerWarnings.cmake  Conan.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake
common/: .clang-tidy  CMakeLists.txt
common/cmake/: Conan.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake
common/include/: common.hpp  num_types.hpp
common/include/battleship/common/: common.hpp
common/include/battleship/common/util/: geometry.hpp  num_types.hpp  result.hpp
common/include/util/: geometry.hpp  num_types.hpp  result.hpp
common/src/: common.cpp
common/src/util/: geometry.cpp
server/: CMakeLists.txt
server/src/: game.cpp  game.hpp  main.cpp  pch.hpp  server.cpp  server.hpp
test/: CMakeLists.txt
